# imarika-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
app/: config.py  main.py
app/ui/: components.py
app/utils/: helpers.py  logger.py
chain/: conversation.py  llm_chain.py  memory.py  vector_db.py
data/: beans.csv  vector_data.json
db/: .env  Dockerfile  database.py  init.sql
db/chroma/: Dockerfile  chroma.py
db/chroma/data/: chroma.sqlite3
db/migrations/: Dockerfile  alembic.ini  env.py
db/migrations/versions/: 001_create_tables.py
scripts/: deploy.sh  setup.sh
server/: api.py  whatsapp_api.py  ws_server.py
whatsapp/: Dockerfile  client.py  config.py  handler.py
