[tool.poetry]
name = "imaraika app"
version = "0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.20"
streamlit = "^1.43.2"
fastapi = "^0.115.11"
asyncpg = "^0.30.0"
websockets = "^15.0.1"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
pgvector = "^0.4.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
pyflakes = "^3.2.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
