[tool.poetry]
name = "imaraika app"
version = "0.1"
description = ""
authors = ["iLab Africa"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.9"
streamlit = "^1.43.2"
fastapi = "^0.115.11"
asyncpg = "^0.30.0"
websockets = "^15.0.1"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
dotenv = "^0.9.9"
langchain-ollama = "^0.1.0"
langchain_chroma = "^0.1.0"
langchain_community = "^0.2.9"
chromadb = "^0.5.9"
weatherapipython = { git = "https://github.com/weatherapicom/python", branch= "main"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
pyflakes = "^3.2.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
